Links a otras paginas
son nuevas direcciones para los otros documentos

--- a/Menu.html
+++ b/Menu.html
@@ -17,10 +17,10 @@
 	</center>
 	
 	<ol>
-<a href="Problematica.html"><li>Problematica</li></a>
-  <li> Estudio</li>
-  <li>Conclusiones</li>
-  <li>Referencias</li>
+		<a href="Problematica.html"><li>Problematica</li></a>
+		<a href="Estudio.html"><li> Estudio</li></a>
+		<a href="Conclusionesyref.html"><li>Conclusiones</li></a>
+		<a href="Conclusionesyref.html"><li>Referencias</li></a>
 	</ol>
 
 </body>
