Investigación nivel mundial
Added information to the page

--- a/Problematica.html
+++ b/Problematica.html
@@ -13,14 +13,39 @@
 	<center>
 		<h1>Problematica</h1>
 	</center>
+		<h3>Que es la Obesidad</h3>
+		<p>El sobrepeso y la obesidad se definen como una acumulación anormal o <br>
+		excesiva de grasa que puede ser perjudicial para la salud.<br><br>
+
+		El índice de masa corporal (IMC) es un indicador simple de la relación <br>
+		entre el peso y la talla que se utiliza frecuentemente para identificar <br>
+		el sobrepeso y la obesidad en los adultos. Se calcula dividiendo el peso <br>
+		de una persona en kilos por el cuadrado de su talla en metros (kg/m2).<br><br>
+			
+		En el caso de los adultos, la OMS define el sobrepeso y la obesidad como <br>
+		se indica a continuación:<br><br>
+
+		sobrepeso: IMC igual o superior a 25.<br>
+		obesidad: IMC igual o superior a 30.<br><br>
+		
+		En el caso de los niños de 5 a 19 años, el sobrepeso y la obesidad se <br>
+		definen de la siguiente manera:<br><br>
+
+		El sobrepeso es el IMC para la edad con más de una desviación típica por <br>
+		encima de la mediana establecida en los patrones de crecimiento infantil <br>
+		de la OMS, y la obesidad es mayor que dos desviaciones típicas por encima <br>
+		de la mediana establecida en los patrones de crecimiento infantil de la OMS.<br><br>
+			
+		</p>
 		<h3>Nivel Mundial</h3>
-		<p>Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.</p>
+		<p>La obesidad ha sido y seguira siendo un problema mundial por decadas.<br>
+		Este desorden alimenticio afecta a millones de personas alrededor del mundo <br>
+		a diario y ha tomado la vida de cientos de miles atravez de las decadas.<br>
+		Segun la OMS "Desde 1975, la obesidad se ha casi triplicado en todo el mundo."<br>
+		La organización mundial de la salud tambien menciono en su reporte de 2016 que:<br>
+		"En 2016 había más de 340 millones de niños y adolescentes (de 5 a 19 años) con <br>
+		sobrepeso u obesidad."<br><br>
+		</p>
 		<h3>Mexico</h3>
 		<p>Texto texto investigacion mucho texto mucho texto.
 		Texto texto investigacion mucho texto mucho texto.
