--- a/Problematica.html
+++ b/Problematica.html
@@ -14,7 +14,8 @@
 		<h1>Problematica</h1>
 	</center>
 		<h3>Que es la Obesidad</h3>
-		<p>El sobrepeso y la obesidad se definen como una acumulación anormal o <br>
+		<p>
+		El sobrepeso y la obesidad se definen como una acumulación anormal o <br>
 		excesiva de grasa que puede ser perjudicial para la salud.<br><br>
 
 		El índice de masa corporal (IMC) es un indicador simple de la relación <br>
@@ -37,8 +38,10 @@
 		de la mediana establecida en los patrones de crecimiento infantil de la OMS.<br><br>
 			
 		</p>
+	
 		<h3>Nivel Mundial</h3>
-		<p>La obesidad ha sido y seguira siendo un problema mundial por decadas.<br>
+		<p>
+		La obesidad ha sido y seguira siendo un problema mundial por decadas.<br>
 		Este desorden alimenticio afecta a millones de personas alrededor del mundo <br>
 		a diario y ha tomado la vida de cientos de miles atravez de las decadas.<br>
 		Segun la OMS "Desde 1975, la obesidad se ha casi triplicado en todo el mundo."<br>
@@ -46,14 +49,19 @@
 		"En 2016 había más de 340 millones de niños y adolescentes (de 5 a 19 años) con <br>
 		sobrepeso u obesidad."<br><br>
 		</p>
+	
 		<h3>Mexico</h3>
-		<p>Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.</p>
+		<p>
+		El ISSSTE menciona que "En México, el 70% de los mexicanos padece sobrepeso <br>
+		y casi una tercera parte sufre de obesidad, además, esta enfermedad se asocia <br>
+		principalmente con la diabetes y enfermedades cardiovasculares, pero también <br>
+		con trastornos óseos y musculares y algunos tipos de cáncer." Estos datos revelan <br>
+		que si hay un gran problema de obesidad y sobrepeso en el pais que afecta a una <br>
+		gran parte de la población. En el mismo estudio revela que: "Los hábitos <br>
+		alimenticios poco saludables y la falta de ejercicio ocasionan el 32% de las <br>
+		muertes de mujeres y el 20% de hombres en el país.
+			
+		</p>
 		<h3>Technologia</h3>
 		<p>Texto texto investigacion mucho texto mucho texto.
 		Texto texto investigacion mucho texto mucho texto.
