Added some breaks

--- a/Problematica.html
+++ b/Problematica.html
@@ -59,7 +59,7 @@
 		que si hay un gran problema de obesidad y sobrepeso en el pais que afecta a una <br>
 		gran parte de la población. En el mismo estudio revela que: "Los hábitos <br>
 		alimenticios poco saludables y la falta de ejercicio ocasionan el 32% de las <br>
-		muertes de mujeres y el 20% de hombres en el país.
+		muertes de mujeres y el 20% de hombres en el país.<br><br>
 			
 		</p>
 		<h3>Technologia</h3>
