--- a/Menu.html
+++ b/Menu.html
@@ -5,7 +5,7 @@
 
 <head>
 	<title>Obesidad</title>
-	<link real="stylesheet" href="Formato_de_Menu.CSS"/>
+	<link rel="stylesheet" href="Formato_de_Menu.CSS"/>
 	
 </head>
 
