--- a/Menu.html
+++ b/Menu.html
@@ -20,9 +20,9 @@
 	
 	<ol>
 		<a href="Problematica.html"><li>Problematica</li></a>
-		<a href="Estudio.html"><li> Estudio</li></a>
-		<a href="Conclusionesyref.html"><li>Conclusiones</li></a>
-		<a href="Conclusionesyref.html"><li>Referencias</li></a>
+		<a href="Data.html"><li> Estudio</li></a>
+		<a href="conclusionesyref.html"><li>Conclusiones</li></a>
+		<a href="conclusionesyref.html"><li>Referencias</li></a>
 	</ol>
 
 </body>
