--- a/Menu.html
+++ b/Menu.html
@@ -9,20 +9,20 @@
 	
 </head>
 
-<body bgcolor="#A1EAD1">
+<body>
 	<center>
-		<h1>OBESIDAD</h1>
-		<h3>By Ramírez, Revilla, Zaldívar y Bravo</h3>
-		<h3>Introduccion a la Computación</h3>
-		<h3>Mayra Guadalupe Mora espinosa</h3>
+		<h1 id="Titulo">OBESIDAD</h1>
+		<h3 id="Nombres">By Ramírez, Revilla, Zaldívar y Bravo</h3>
+		<h3 id="Nombres">Introduccion a la Computación</h3>
+		<h3 id="Nombres">Mayra Guadalupe Mora espinosa</h3>
 
 	</center>
 	
 	<ol>
-		<a href="Problematica.html"><li>Problematica</li></a>
-		<a href="Data.html"><li> Estudio</li></a>
-		<a href="conclusionesyref.html"><li>Conclusiones</li></a>
-		<a href="conclusionesyref.html"><li>Referencias</li></a>
+		<a href="Problematica.html"><li class="Link">Problematica</li></a>
+		<a href="Data.html"><li class="Link"> Estudio</li></a>
+		<a href="conclusionesyref.html"><li class="Link">Conclusiones</li></a>
+		<a href="conclusionesyref.html"><li class="Link">Referencias</li></a>
 	</ol>
 
 </body>
