--- a/Menu.html
+++ b/Menu.html
@@ -10,19 +10,19 @@
 </head>
 
 <body>
-	<center>
-		<h1 id="Titulo">OBESIDAD</h1>
+	<section class="Centrado">
+		<h1 id="titulo">OBESIDAD</h1>
 		<h3 id="Nombres">By Ramírez, Revilla, Zaldívar y Bravo</h3>
 		<h3 id="Nombres">Introduccion a la Computación</h3>
 		<h3 id="Nombres">Mayra Guadalupe Mora espinosa</h3>
 
-	</center>
+	</section>
 	
 	<ol>
-		<a href="Problematica.html"><li class="Link">Problematica</li></a>
-		<a href="Data.html"><li class="Link"> Estudio</li></a>
-		<a href="conclusionesyref.html"><li class="Link">Conclusiones</li></a>
-		<a href="conclusionesyref.html"><li class="Link">Referencias</li></a>
+		<a href="Problematica.html"><li class="Links">Problematica</li></a>
+		<a href="Data.html"><li class="Links"> Estudio</li></a>
+		<a href="conclusionesyref.html"><li class="Links">Conclusiones</li></a>
+		<a href="conclusionesyref.html"><li class="Links">Referencias</li></a>
 	</ol>
 
 </body>
