--- a/Problematica.html
+++ b/Problematica.html
@@ -71,7 +71,7 @@
 		muertes de mujeres y el 20% de hombres en el país.<br><br>
 			
 		</p>
-		<h3 id="subtitulo">Technologia</h3>
+		<h3 id="subtitulo_3">Technologia</h3>
 		<p class="Texto_T">Texto texto investigacion mucho texto mucho texto.
 		Texto texto investigacion mucho texto mucho texto.
 		Texto texto investigacion mucho texto mucho texto.
