--- a/Problematica.html
+++ b/Problematica.html
@@ -72,13 +72,18 @@
 			
 		</p>
 		<h3 id="subtitulo_3">Technologia</h3>
-		<p class="Texto_T">Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.
-		Texto texto investigacion mucho texto mucho texto.</p>
+		<p class="Texto_T">Esta seccion de tecnologia se debedividir en 2 secciones, <br>
+		una de la tecnologia como algo bueno y otra como algo malo, en este caso comenzaremos <br>
+		por como la tecnologia afecta de forma NEGATIVA y luego como afecta de forma POSITIVA.<br><br>
+	
+		Aspectos negativos:<br>
+		"Las alteraciones de horarios, el estrés y el sedentarismo provocado por las pantallas <br>
+		digitales son factores de riesgo para el exceso de peso, que ya afecta al 60% de los españoles" <br>
+		Asi describe las nuevas tecnologias un periodico español que argumenta que el sedentarismo, <br>
+		alteraciones de horarios y jornadas laborales junto con otros factores han causado un <br>
+		incremento en problemas de sobrepeso en la población. Esto segun la Sociedad Española de <br>
+		Endocrinología y Nutrición (SEEN) 
+		</p>
 
 </body>
 
