--- a/Problematica.html
+++ b/Problematica.html
@@ -82,7 +82,20 @@
 		Asi describe las nuevas tecnologias un periodico español que argumenta que el sedentarismo, <br>
 		alteraciones de horarios y jornadas laborales junto con otros factores han causado un <br>
 		incremento en problemas de sobrepeso en la población. Esto segun la Sociedad Española de <br>
-		Endocrinología y Nutrición (SEEN) 
+		Endocrinología y Nutrición (SEEN) <br><br>
+			
+		Aspectos positivos:<br>
+		"La tecnología se ha colado en la lucha contra la obesidad pero los profesionales advierten <br>
+		de que puede ser un arma de doble filo: hay que buscar información avalada por profesionales <br>
+		y que tenga en cuenta las características personales del individuo." Explica el periodico El independiente.<br>
+		El periodico atribuye avances en la conciencia colectiva a nuevas tecnologias como <br>
+		aplicaciones, contadores de pasos y herramientas de inteligencia artificial.<br><br>
+		
+		Argumenta que mucha de esta tecnologia nueva ayuda a ser mas eficientes a informarnos <br>
+		mas y estar mas conciente d nuestro estado fisico y de salud. Estos avances le dan mas <br>
+		herramientas a personas que talves no tengan la mejor salud o estado fisico para que logren <br>
+		hacer un cambio positivo en sus vidas.<br><br>
+			
 		</p>
 
 </body>
