--- a/conclusionesyref.html
+++ b/conclusionesyref.html
@@ -38,10 +38,12 @@
 		tecnologías en la obesidad? La Razón. https://www.larazon.es/<br>
 		salud/20201015/oqsmzc3j7jey7e5zikiixafnpa.html<br><br>
 			
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.</p>
+		Castro, C. (2017, 11 noviembre). El móvil adelgaza <br>
+		si sabes cómo usarlo. El Independiente. <br>
+		https://www.elindependiente.com/vida-sana/2017/11/11/<br>
+		obesidad-tecnologias-movil/<br><br>
+			
+		</p>
 
 </body>
 
