--- a/conclusionesyref.html
+++ b/conclusionesyref.html
@@ -14,13 +14,27 @@
 	<center>
 		<h1>Conclusiones</h1>
 	</center>
-		<p>Texto texto investigacion mucho texto mucho texto.<br>
+		<p>
+		Revilla:<br>
+		Este trabajo en general he aprendido mucho sobre diferentes <br>
+		temas, no solo sobre el tema que nos asignaron de la <br>
+		obesidad infantil sino tambien evidentemente sobre los <br>
+		temas aplicados y vistos en clase. Tanto como programación <br>
+		en html y css como trabajo en equipo y planeación.<br><br>
+		
+		Logre aplicar el pensamiento logico-analitico que aprendimos <br>
+		en clase para crear esta pagina con mis compañeros los cuales <br>
+		todos aportamos y nos ayudamos cuando no entendiamos algo, lo <br>
+		cual creo que es algo esencial para la creacion de proyectos como este <br><br>
+			
+			
+		Ramirez:<br>
 		Texto texto investigacion mucho texto mucho texto.<br>
+		Zaldivar:<br>
 		Texto texto investigacion mucho texto mucho texto.<br>
+		Bravo:<br>
 		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
-		Texto texto investigacion mucho texto mucho texto.</p>
+		</p>
 	<center>
 		<h1>Referencias</h1>
 	</center>
