--- a/conclusionesyref.html
+++ b/conclusionesyref.html
@@ -30,8 +30,16 @@
 			
 		Ramirez:<br>
 		Texto texto investigacion mucho texto mucho texto.<br>
-		Zaldivar:<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
+			
+		Zaldívar:<br>
+		El hacer este projecto me enseño mucho sobre la salud en México <br>
+		personalmente me impacto mucho el saber que yo tengo desnutrición moderada <br>
+		y al compararme con el resto de México me di cuenta que puede llegar
+		a ser un problema mucho más grande como pais.
+			
+		Ademas pude conocer un poco más sobre el funcionamiento de GitHub y <br>
+		como es que funcióna para trabajar en equipos o multiples usuarios a la vez .<br><br>
+			
 		Bravo:<br>
 		Texto texto investigacion mucho texto mucho texto.<br>
 		</p>
