--- a/Data.html
+++ b/Data.html
@@ -4,46 +4,47 @@
 
 <head>
 	<title>Salud en Mexio</title>
+	<link rel="stylesheet" href="Formato_de_Problematica.CSS">
+	
 </head>
 
 <body bgcolor="#A1EAD1">
 	
-	<a href="Menu.html"><img src="https://cdn-icons-png.flaticon.com/512/25/25694.png"
-	width="50"height="50"></a>
+	<a href="Menu.html"><img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" class="REGRESO"></a>
 	
-	<center>
+	<seccion class="Centrado">
 		<h1>Interpretación de datos</h1>
-	</center>
-		<h3>1) Porcentaje de condiciónes Total</h3>
+	</seccion>
+		<h3 id="subtitulo">1) Porcentaje de condiciónes Total</h3>
 		<img src="1.png">
-		<p>En esta grafica podemos observar que el 66% de la población esta en condicion saludable o normal<br>
+		<p class="CTM_TATA">En esta grafica podemos observar que el 66% de la población esta en condicion saludable o normal<br>
 		seguido del sobrepeso que ocupa un 20% de la población total<br>
 		mientras que desnutricion leve ocupa no mas del 6% junto a la obesidad siendo el 4%.</p>
 
-		<h3>2) Condición basado en el sexo</h3>
+		<h3 id="subtitulo">2) Condición basado en el sexo</h3>
 		<img src="2.png">
-		<p>En estas graficas podemos observar la comparación entre casos de hombres y mujeres.<br>
+		<p class="CTM_TATA">En estas graficas podemos observar la comparación entre casos de hombres y mujeres.<br>
 		En lo general las niñas son mas saludables que los niños.</p>
 
-		<h3>3) Condición basado en el Estado</h3>
+		<h3 id="subtitulo">3) Condición basado en el Estado</h3>
 		<img src="3.png">
-		<p>En la grafica se puede apreciar los diferentes condiciónes en la que se encuentrar en diferentes estados,<br>
+		<p class="CTM_TATA">En la grafica se puede apreciar los diferentes condiciónes en la que se encuentrar en diferentes estados,<br>
 		Sin embargo algunos estados tienen mayor cantidad de casos debido a que su población es mucho mayor.</p>
 
-		<h3>4) Condición basado en la edad</h3>
-		<img src="4.png">
-		<p>Se puede apreciar que algunas condiciones no estan algunas edades debido a que<br>
+		<h3 id="subtitulo">4) Condición basado en la edad</h3>
+		<img src="4.png" class="vives">
+		<p class="CTM_TATA">Se puede apreciar que algunas condiciones no estan algunas edades debido a que<br>
 		alrededor de 13 a 14 años los niños suelen estar mas saludables.<br>
 		sin embargo algunos estados tienen mayor cantidad de casos debido a que su población es mucho mayor</p>
 
-		<h3>5) Tamaño de la cintura</h3>
-		<img src="5.png">
-		<p>En la grafica se demuestra el promedio del tamaño de la cintura en la población y sabiendo<br>
+		<h3 id="subtitulo">5) Tamaño de la cintura</h3>
+		<img src="5.png" class="vives">
+		<p class="CTM_TATA">En la grafica se demuestra el promedio del tamaño de la cintura en la población y sabiendo<br>
 		que la mayoria de la población esta saludable tambien muestra el tamaño que se deberia de tener para una vida saludable.</p>
 
-		<h3>6) Porcentaje de Grasa </h3>
-		<img src="6.png">
-		<p>En la tabla se puede apreciar la cantidad de personas que tienen<br>
+		<h3 id="subtitulo">6) Porcentaje de Grasa </h3>
+		<img src="6.png" class="TABLA">
+		<p class="CTM_TATA">En la tabla se puede apreciar la cantidad de personas que tienen<br>
 		un % de grasa basado en la condicion de salud que tienen</p>
     </body>
 </html>
