--- a/conclusionesyref.html
+++ b/conclusionesyref.html
@@ -41,7 +41,11 @@
 		como es que funcióna para trabajar en equipos o multiples usuarios a la vez .<br><br>
 			
 		Bravo:<br>
-		Texto texto investigacion mucho texto mucho texto.<br>
+		A parte de ayudarme a conocer en mayor cantidad lo que eran los porcentajes de obesidad y otras enfermedades en mexico, este proyeto tambíen me ayudo
+		a comprender el como podemos usar las herramientas de codigo de forma más efectiva y de forma que puedan a ayudar a otras personas en un futuro por medio
+		de los conocimientos aplicados y conocidos durante nuestras prácticas, es posible que en un futuro podamos digitalizar los suficientes datos como para
+		tener una medida exacta y a tiempo real de las condiciones de vida y habitos de las personas con obesidad, de forma que podamos ayudarlos a evitar tener
+		problemas relacionados a dicha enfermedad.<br>
 		</p>
 	<center>
 		<h1>Referencias</h1>
